--- a/src/test_project/templates/home.html
+++ b/src/test_project/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>this is home page</h1>
+        <h1>this is home page this is {{request.user}}</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
