--- a/src/test_project/templates/about.html
+++ b/src/test_project/templates/about.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>this is sample title</title>
-    <!-- Include your CSS and JavaScript files here -->
-</head>
-<body>
-    <header>
-        <h1>this is about page</h1>
-        <nav>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <section>
-            <h2>Welcome to our Django Home Page</h2>
-            <p>This is the main content of the home page. You can provide a brief introduction about your website or any important information here.</p>
-        </section>
-    </main>
-    
-    <footer>
-        <p> Your Website. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>this is about page inherit  block content</h1>
+<h1>this is about page inherit block contente</h1>
+replace me
+{% endblock content %}
+
