include template tag

--- a/src/test_project/templates/base.html
+++ b/src/test_project/templates/base.html
@@ -6,9 +6,7 @@
         </title>
     </head>
     <body>
-        <h1>
-            this is navbar
-        </h1>
+        {% include 'navbar.html' %}
         <h1>this is top of block content in base.html</h1>
         {% block content %}
 
