template context refers to the data that is passed from a view function to a template for rendering. It provides the necessary information for the template to display dynamic content based on the context variables provided by the view. Templates in Django are primarily used to generate HTML or other types of documents, and the context is what allows you to insert dynamic data into these templates.

--- a/src/test_project/templates/about.html
+++ b/src/test_project/templates/about.html
@@ -4,5 +4,14 @@
 <h1>this is about page inherit  block content</h1>
 <h1>this is about page inherit block contente</h1>
 replace me
+
+
+<p>
+    <h1>
+        {{ my_text }},{{ my_number }}
+    </h1>
+</p>
+
+
 {% endblock content %}
 
