--- a/src/test_project/templates/about.html
+++ b/src/test_project/templates/about.html
@@ -8,10 +8,20 @@ replace me
 
 <p>
     <h1>
-        {{ my_text }},{{ my_number }}
-        {{my_list}}
+        {{ my_text }},{{ my_number }},{{my_list}}
     </h1>
 </p>
+
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+</ul>
+
+<ul>
+{% for my_sub_item in my_list  %}
+    <li>{{ my_sub_item }}</li>   
+{% endfor %}
+</ul>
 
 
 {% endblock content %}
