--- a/src/test_project/templates/about.html
+++ b/src/test_project/templates/about.html
@@ -19,7 +19,7 @@ replace me
 
 <ul>
 {% for my_sub_item in my_list  %}
-    <li>{{ my_sub_item }}</li>   
+    <li>{{ forloop.counter }}.{{ my_sub_item }}</li>   
 {% endfor %}
 </ul>
 
