--- a/src/test_project/templates/about.html
+++ b/src/test_project/templates/about.html
@@ -6,7 +6,9 @@
 replace me
 <h1>{{ title|upper }} this is something</h1>
 <h3>{{ title|capfirst }}</h3>
+<h1>{{ title|title }} --this is title</h1>
 {{ my_html|safe }}
+{{ my_html|slugify }}slugify
 
 <p>
     <h1>
